bug 315863 - BeOS Firefox crashes on 1st run with no existing profile, patch by doug@sheltonfamily.org, r=fyysik moa=me